fix: fixes the destruction of the interface when the user's name and profession are too long

--- a/css/blocks/profile/__name/profile__name.css
+++ b/css/blocks/profile/__name/profile__name.css
@@ -4,6 +4,10 @@
   font-size: 42px;
   font-weight: 500;
   line-height: 48px;
+  max-width: 300px;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
 }
 
 @media screen and (max-width: 530px) {
