--- a/css/blocks/profile/__position/profile__position.css
+++ b/css/blocks/profile/__position/profile__position.css
@@ -4,6 +4,10 @@
   font-size: 18px;
   font-weight: 400;
   line-height: 22px;
+  max-width: 300px;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
 }
 
 @media screen and (max-width: 530px) {
